--- a/stories/index.html
+++ b/stories/index.html
@@ -1323,16 +1323,40 @@
       <td><a name="ko0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0003</td>
+      <td><a href="/stories/ko/0003_학교-옷_slides.html" target="_blank">학교 옷</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0004</td>
       <td><a href="/stories/ko/0004_염소-개-그리고-소_slides.html" target="_blank">염소, 개 그리고 소</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0008</td>
+      <td><a href="/stories/ko/0008_뭐-하고-있니_slides.html" target="_blank">뭐 하고 있니?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/ko/0009_내-고양이는-어디있지_slides.html" target="_blank">내 고양이는 어디있지?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/ko/0030_느낌들_slides.html" target="_blank">느낌들</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/ko/0067_요리_slides.html" target="_blank">요리</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -1345,6 +1369,12 @@
       <td><a href="/stories/ko/0087_나는-책-읽기를-좋아해요_slides.html" target="_blank">나는 책 읽기를 좋아해요!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0089</td>
+      <td><a href="/stories/ko/0089_칼라이는-식물에게-말해요_slides.html" target="_blank">칼라이는 식물에게 말해요</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0095</td>
@@ -1363,6 +1393,12 @@
       <td><a href="/stories/ko/0112_나의-몸-_slides.html" target="_blank">나의 몸 </a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/ko/0120_머리_slides.html" target="_blank">머리</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0129</td>
@@ -1395,6 +1431,24 @@
       <td><a name="ko0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0231</td>
+      <td><a href="/stories/ko/0231_날씨-책_slides.html" target="_blank">날씨 책</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0271</td>
+      <td><a href="/stories/ko/0271_둘_slides.html" target="_blank">둘</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/ko/0296_바나나-장수-톰_slides.html" target="_blank">바나나 장수 톰</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/ko/0302_불_slides.html" target="_blank">불</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1405,6 +1459,12 @@
       <td><a href="/stories/ko/0337_밀랍-아이들_slides.html" target="_blank">밀랍 아이들</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/ko/0342_벌_slides.html" target="_blank">벌</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -2166,10 +2226,22 @@
       <td><a name="tl0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/tl/0243_bakasyon-sa-bahay-ni-lola_slides.html" target="_blank">Bakasyon sa bahay ni Lola</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/tl/0253_aking-libro-ng-larawan_slides.html" target="_blank">Aking libro ng larawan</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0262</td>
+      <td><a href="/stories/tl/0262_magozwe_slides.html" target="_blank">Magozwe</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -2266,7 +2338,7 @@
       <td>0003</td>
       <td><a href="http://my.africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#tl0003">tl</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#tl0003">tl</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -2290,13 +2362,13 @@
       <td>0008</td>
       <td><a href="http://my.africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#tl0008">tl</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#tl0008">tl</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="http://my.africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -2356,7 +2428,7 @@
       <td>0067</td>
       <td><a href="http://my.africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0067">gu</a>, <a href="#no0067">no</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -2395,6 +2467,12 @@
       <td><a href="#ar0087">ar</a>, <a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="http://my.africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#ko0089">ko</a></td>
+    </tr>
+    <tr>
       <td>0093</td>
       <td><a href="http://my.africanstorybook.org/stories/my-baby-boy">My baby boy</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
@@ -2428,7 +2506,7 @@
       <td>0120</td>
       <td><a href="http://my.africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0120">gu</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0122</td>
@@ -2572,13 +2650,19 @@
       <td>0231</td>
       <td><a href="http://my.africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
       <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#tl0234">tl</a></td>
+    </tr>
+    <tr>
+      <td>0243</td>
+      <td><a href="http://my.africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0243">tl</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -2593,6 +2677,12 @@
       <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="http://my.africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0262">tl</a></td>
+    </tr>
+    <tr>
       <td>0264</td>
       <td><a href="http://my.africanstorybook.org/stories/letters">Letters</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -2602,7 +2692,7 @@
       <td>0271</td>
       <td><a href="http://my.africanstorybook.org/stories/two">Two</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0271">gu</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#tl0271">tl</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#gu0271">gu</a>, <a href="#ko0271">ko</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#tl0271">tl</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0287</td>
@@ -2626,7 +2716,7 @@
       <td>0296</td>
       <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0296">tl</a></td>
+      <td><a href="#ko0296">ko</a>, <a href="#tl0296">tl</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -2692,7 +2782,7 @@
       <td>0342</td>
       <td><a href="http://my.africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#tl0342">tl</a></td>
+      <td><a href="#ko0342">ko</a>, <a href="#tl0342">tl</a></td>
     </tr>
     <tr>
       <td>0359</td>
