--- a/stories/index.html
+++ b/stories/index.html
@@ -1479,6 +1479,12 @@
       <td><a name="ko0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0324</td>
+      <td><a href="/stories/ko/0324_집으로부터-도시로-떠난-날_slides.html" target="_blank">집으로부터 도시로 떠난 날</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0337</td>
       <td><a href="/stories/ko/0337_밀랍-아이들_slides.html" target="_blank">밀랍 아이들</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2214,6 +2220,12 @@
       <td><a name="tl0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/tl/0089_kausap-ni-khalai-ang-halaman_slides.html" target="_blank">Kausap ni Khalai ang halaman</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo_slides.html" target="_blank">Bakit walang buhok ang mga hippo</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2500,7 +2512,7 @@
       <td>0089</td>
       <td><a href="http://my.africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0089">ko</a></td>
+      <td><a href="#ko0089">ko</a>, <a href="#tl0089">tl</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -2788,7 +2800,7 @@
       <td>0324</td>
       <td><a href="http://my.africanstorybook.org/stories/day-i-left-home-city">Day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0324">tl</a></td>
+      <td><a href="#ko0324">ko</a>, <a href="#tl0324">tl</a></td>
     </tr>
     <tr>
       <td>0327</td>
