--- a/stories/index.html
+++ b/stories/index.html
@@ -1479,6 +1479,12 @@
       <td><a name="ko0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0315</td>
+      <td><a href="/stories/ko/0315_사키마의-노래_slides.html" target="_blank">사키마의 노래</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0324</td>
       <td><a href="/stories/ko/0324_집으로부터-도시로-떠난-날_slides.html" target="_blank">집으로부터 도시로 떠난 날</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2178,6 +2184,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/tl/0002_pagmasdan-ang-mga-hayop_slides.html" target="_blank">Pagmasdan ang mga hayop</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0003</td>
       <td><a href="/stories/tl/0003_ano-isusuot-ko-sa-iskul_slides.html" target="_blank">Ano isusuot ko sa iskul?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2208,6 +2220,12 @@
       <td><a name="tl0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0030</td>
+      <td><a href="/stories/tl/0030_mga-damdamin_slides.html" target="_blank">Mga Damdamin</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0066</td>
       <td><a href="/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html" target="_blank">Si Nozibele at ang Tatlong Hibla ng Buhok</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2218,6 +2236,12 @@
       <td><a href="/stories/tl/0067_pagluto_slides.html" target="_blank">Pagluto</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/tl/0087_mahilig-akong-magbasa_slides.html" target="_blank">Mahilig akong magbasa!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -2248,6 +2272,18 @@
       <td><a href="/stories/tl/0127_ibat-ibang-laro_slides.html" target="_blank">Iba’t Ibang Laro</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/tl/0129_si-bunsong-tamad_slides.html" target="_blank">Si bunsong tamad</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/tl/0156_ang-buwayang-gutom_slides.html" target="_blank">Ang buwayang gutom</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -2296,6 +2332,12 @@
       <td><a href="/stories/tl/0296_ang-tindero-ng-saging-na-si-tom_slides.html" target="_blank">Ang Tindero ng Saging na si Tom</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/tl/0302_apoy_slides.html" target="_blank">Apoy</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0315</td>
@@ -2374,7 +2416,7 @@
       <td>0002</td>
       <td><a href="http://my.africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#gu0002">gu</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#gu0002">gu</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#tl0002">tl</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
@@ -2428,7 +2470,7 @@
       <td>0030</td>
       <td><a href="http://my.africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ko0030">ko</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#ko0030">ko</a>, <a href="#tl0030">tl</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -2506,7 +2548,7 @@
       <td>0087</td>
       <td><a href="http://my.africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -2578,7 +2620,7 @@
       <td>0129</td>
       <td><a href="http://my.africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#tl0129">tl</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -2614,7 +2656,7 @@
       <td>0156</td>
       <td><a href="http://my.africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
@@ -2764,7 +2806,7 @@
       <td>0302</td>
       <td><a href="http://my.africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#tl0302">tl</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
@@ -2788,7 +2830,7 @@
       <td>0315</td>
       <td><a href="http://my.africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0315">tl</a></td>
+      <td><a href="#ko0315">ko</a>, <a href="#tl0315">tl</a></td>
     </tr>
     <tr>
       <td>0320</td>
