--- a/stories/index.html
+++ b/stories/index.html
@@ -2184,6 +2184,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/tl/0001_ang-mamang-napakatangkad_slides.html" target="_blank">Ang mamang napakatangkad</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0002</td>
       <td><a href="/stories/tl/0002_pagmasdan-ang-mga-hayop_slides.html" target="_blank">Pagmasdan ang mga hayop</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2236,6 +2242,12 @@
       <td><a href="/stories/tl/0067_pagluto_slides.html" target="_blank">Pagluto</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0073</td>
+      <td><a href="/stories/tl/0073_pagbibilang_slides.html" target="_blank">Pagbibilang</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0073"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0087</td>
@@ -2410,7 +2422,7 @@
       <td>0001</td>
       <td><a href="http://my.africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -2524,7 +2536,7 @@
       <td>0073</td>
       <td><a href="http://my.africanstorybook.org/stories/counting">Counting</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#eo0073">eo</a>, <a href="#ko0073">ko</a>, <a href="#nn0073">nn</a>, <a href="#no0073">no</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
+      <td><a href="#eo0073">eo</a>, <a href="#ko0073">ko</a>, <a href="#nn0073">nn</a>, <a href="#no0073">no</a>, <a href="#tl0073">tl</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
     </tr>
     <tr>
       <td>0078</td>
